<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VerificationActivity">


    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/s4t1"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.459"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/s4t2"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.118"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="43dp" />

    <RadioButton
        android:id="@+id/radioButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        tools:layout_editor_absoluteX="105dp"
        tools:layout_editor_absoluteY="102dp"
        tools:ignore="MissingConstraints" />

    <RadioButton
        android:id="@+id/radioButton4"
        android:layout_width="46dp"
        android:layout_height="48dp"
        android:text=""
        app:layout_constraintStart_toEndOf="@+id/radioButton3"
        tools:layout_editor_absoluteY="103dp"
        tools:ignore="MissingConstraints" />

    <RadioButton
        android:id="@+id/radioButton5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        app:layout_constraintStart_toEndOf="@+id/radioButton4"
        tools:layout_editor_absoluteY="103dp"
        tools:ignore="MissingConstraints" />

    <RadioButton
        android:id="@+id/radioButton6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        app:layout_constraintStart_toEndOf="@+id/radioButton5"
        tools:layout_editor_absoluteY="103dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="31dp"
        android:layout_height="46dp"
        android:text="@string/s4c1"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/textView11"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="111dp" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="33dp"
        android:layout_height="47dp"
        android:text="@string/s4c2"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/radioButton3"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="111dp" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/s4t4"
        android:textColor="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.109"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="258dp"
        android:layout_height="51dp"
        android:layout_marginTop="52dp"
        android:text="@string/s4mail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.241"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="243dp"
        android:layout_height="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/s4t3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.226"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <Button
        android:id="@+id/button2"
        android:layout_width="130dp"
        android:layout_height="53dp"
        android:text="@string/s4b1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        app:layout_constraintVertical_bias="0.198"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>