<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context=".AddNewAccountActivity"
    >

    <TextView
        android:id="@+id/textView"
        android:layout_width="73dp"
        android:layout_height="28dp"
        android:layout_marginTop="280dp"
        android:text="@string/balance"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.075"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="109dp"
        android:layout_height="44dp"
        android:text="@string/bal"
        android:textColor="@color/white"
        android:textSize="30sp"

        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.083"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.355" />

    <FrameLayout
        android:id="@+id/linearLayout"
        android:layout_width="420dp"
        android:layout_height="390dp"
        android:layout_marginTop="428dp"
        android:background="@drawable/curveshape"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/enter_name"
            android:layout_width="391dp"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="11dp"
            android:background="@drawable/rounded_edittext_bg"
            android:borderColor="#000000"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.476"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints,TextViewEdits" />

        <TextView
            android:id="@+id/enter_name2"
            android:layout_width="391dp"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="100dp"
            android:background="@drawable/rounded_edittext_bg"
            android:hint="@string/account_type"
            android:inputType="textPersonName"
            android:padding="10dp"
            app:circularflow_radiusInDP="20dp"
            app:drawableRightCompat="@drawable/baseline_arrow_drop_down_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/enter_name1"
            tools:ignore="MissingConstraints,TextViewEdits" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="150dp"
            android:layout_marginTop="180dp"
            android:text="@string/s6b1" />


    </FrameLayout>

    <TextView
        android:id="@+id/textView20"
        android:layout_width="111dp"
        android:layout_height="20dp"
        android:textColor="@color/white"
        android:text="@string/add_new_account"
        tools:layout_editor_absoluteX="128dp"
        tools:layout_editor_absoluteY="17dp" />
</androidx.constraintlayout.widget.ConstraintLayout>