<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SplashAccountActivity">

    <TextView
        android:id="@+id/textView17"
        android:layout_width="186dp"
        android:layout_height="73dp"
        android:layout_marginTop="84dp"
        android:text="@string/s7t1"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.115"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="277dp"
        android:layout_height="65dp"
        android:layout_marginTop="36dp"
        android:textSize="15sp"
        android:text="@string/s7t2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.194"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView17" />

    <Button
        android:id="@+id/btnSetUpAccount"
        android:layout_width="224dp"
        android:layout_height="63dp"
        android:layout_marginTop="336dp"
        android:text="@string/s7b1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.46"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView18"
        app:layout_constraintVertical_bias="0.327" />
</androidx.constraintlayout.widget.ConstraintLayout>