<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.OnBoardingActivity"
    tools:layout_editor_absoluteX="-5dp"
    tools:layout_editor_absoluteY="20dp">

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="313dp"
        android:layout_height="267dp"
        android:layout_marginTop="60dp"
        android:importantForAccessibility="no"
        android:src="@drawable/hand"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.53"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints,ImageContrastCheck" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="284dp"
        android:layout_height="wrap_content"
        android:text="@string/s21"
        android:textColor="@color/black"
        android:textSize="33sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView1"
        tools:ignore="MissingConstraints,TextSizeCheck" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="281dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/s23"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="MissingConstraints,TextSizeCheck" />

    <Button
        android:id="@+id/btnSignUPOnBoarding"
        android:layout_width="306dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/s2b1"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@+id/btnLoginOnBoarding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnLoginOnBoarding"
        android:layout_width="307dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/l1Purple"
        android:text="@string/s2b2"
        android:textColor="@color/colorPrimary"
        app:cornerRadius="10dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>