<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteX="-5dp"
    tools:layout_editor_absoluteY="20dp">


    <TextView
        android:id="@+id/signup_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sign Up"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="163dp"
        tools:layout_editor_absoluteY="16dp" />

    <TextView
        android:id="@+id/enter_name"
        android:layout_width="389dp"
        android:layout_height="39dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/rounded_edittext_bg"
        android:borderColor="#000000"
        android:hint="Name"
        android:inputType="textPersonName"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_title"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/enter_name1"
        android:layout_width="387dp"
        android:layout_height="39dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_edittext_bg"
        android:hint="Email"
        android:inputType="textPersonName"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enter_name"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/enter_name2"
        android:layout_width="391dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_edittext_bg"
        android:hint="@string/password"
        android:inputType="textPersonName"
        android:padding="10dp"
        app:circularflow_radiusInDP="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enter_name1"
        tools:ignore="MissingConstraints,TextViewEdits"
        app:drawableRightCompat="@drawable/baseline_remove_red_eye_24" />

    <CheckBox
        android:id="@+id/accept_terms"
        android:layout_width="386dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:text="@string/s3c"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enter_name2"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/signup_button"
        android:layout_width="357dp"
        android:layout_height="54dp"
        android:layout_marginTop="28dp"
        android:text="Sign Up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/accept_terms" />

    <Button
        android:id="@+id/signup_with_google"
        android:layout_width="361dp"
        android:layout_height="59dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/rectanaglebtn"
        android:drawableStart="@drawable/flat_color_icons_google"
        android:text="Sign Up with Google"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.54"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/s3t1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_button" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/s3t2"
        app:layout_constraintTop_toBottomOf="@+id/signup_with_google"
        tools:layout_editor_absoluteX="107dp" />

</androidx.constraintlayout.widget.ConstraintLayout>